syntax = "proto3";

package pb;
option go_package = "github.com/michaelquigley/dilithium/protocol/blaster/pb";

enum MessageType {
  SYNC = 0;
  HELLO = 1;
  OK = 2;
  DATA = 3;
  EOW = 4;
  ACK = 5;
  CLOSE = 6;
}

message WireMessage {
  int32 sequence = 1;
  MessageType type = 2;

  HelloPayload helloPayload = 3;
  DataPayload dataPayload = 4;
  EowPayload eowPayload = 5;
  AckPayload ackPayload = 6;

  message HelloPayload {
    string session = 1;
  }

  message DataPayload {
    bytes data = 1;
  }

  message EowPayload {
    int32 highWater = 1;
  }

  message AckPayload {
    int32 highWater = 1;
    repeated int32 missing = 2;
  }
}